  if enabled history saves also these messages
- Disabled High DPI icons in windows (can be enabled with qt.conf file)
- Added new option in Settings - Chat - "Save maximum lines in chat": 
  you can choose how many lines to save for every chat
- Added "Clear cache items after X days" option: default is 96 days

BeeBEEP 5.6.4
- For security reasons the beebeep.off file (saved unsent messages) are now linked to the beebeep.ini file 
  via an authorization code. In case of different code the file will not be loaded.
- Fixed a bug in MacOSX: custom resource folder path will be the same of data folder
- Unsent messages are now saved in file beebeep.off when BeeBEEP is closed (option can be disabled)
- Fixed system tray icon size (default is 24px) in Linux Desktop Environment
- Updated HUNSPELL library to 1.7.0
- File beebeep.rc can be placed also in /etc folder in Unix like systems (Linux and MacOSX)
- User and chat tooltips show also unsent messages
- New feature: you can test your network connections in menu "Main" - "Test your network"  
- File share: file icons are now selected from file mimetype in Linux.
- Fixed a minor bug on new message notification

BeeBEEP 5.6.2 
- New feature: you can also send files (dragging and) dropping them on the user in main user list window
- Added "RaiseMainWindowOnNewMessageArrived" option
-(Desktop Sharing feature re-enabled)

BeeBEEP 5.6.1
- Updated to Qt 5.9.8 (Windows)
- Fixed an error in group notification when new message arrives
- Windows installer now creates a rule in firewall for BeeBEEP 
- Added "ShowChatsOnConnection" option to show the chat list at startup
- Added "HideEmptyChatsInList" option to hide empty chats in list
- (Disabled Desktop Sharing feature for testing)

BeeBEEP 5.6.0
- Now the Avatar icon border in the chat right panel will be yellow if the messages have not yet been 
  displayed in the user's chat.
- If option "Always open chat on new message" is enabled and "Raise previously opened 