@@ -34,7 +34,7 @@ class GuiChatMessage
 {
 public:
   static QString datetimestampToString( const ChatMessage&, bool show_timestamp, bool show_datestamp );
-  static QString chatToHtml( const Chat&, bool skip_file_transfers, bool skip_system_message, bool force_timestamp, bool force_datestamp );
+  static QString chatToHtml( const Chat&, bool skip_file_transfers, bool skip_system_message, bool force_timestamp, bool force_datestamp, bool use_chat_compact );
   static QString formatMessage( const User&, const ChatMessage&, VNumber last_user_id, bool show_timestamp, bool show_datestamp, bool skip_system_message, bool show_message_group_by_user, bool use_your_name, bool use_chat_compact );
   static QString formatSystemMessage( const ChatMessage&, VNumber last_user_id, bool show_timestamp, bool show_datestamp, bool use_chat_compact );
   static bool messageCanBeShowedInActivity( const ChatMessage& );
